src/snapshots/dson__macros__tests__crdt_map_literal_macro_array.snap
---
source: src/macros.rs
expression: map
---
{
    "field_x": v(
        ${(@1.1, 1): "Hello"},
    ),
    "field_y": v(
        ${(@1.1, 2): "World"},
    ),
    "field_z": v(
        []{Uid(@1.1, 4): v((${(@1.1, 3): "Banana"}, pos={(@1.1, 5): {(@1.1, 6): 42}})), Uid(@1.1, 8): v((${(@1.1, 7): "Cantaloupe"}, pos={(@1.1, 9): {(@1.1, 10): 43}}))},
    ),
}
